<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".QuestionView">

    <TextView
        android:id="@+id/questionTypeName"
        android:layout_width="308dp"
        android:layout_height="62dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/colorPrimary"
        android:ellipsize="none"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logicKey1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/questionTypeName" />

    <EditText
        android:id="@+id/logicElement6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:inputType="number"
        android:text="@string/logicElementValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logicElement4"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/logicElement2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="484dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:inputType="number"
        android:text="@string/logicElementValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/logicElement3"
        app:layout_constraintStart_toEndOf="@+id/logicElement1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/logicElement4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:inputType="number"
        android:text="@string/logicElementValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/logicElement6"
        app:layout_constraintStart_toEndOf="@+id/logicElement3"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/logicElement1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:inputType="number"
        android:text="@string/logicElementValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/logicElement2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/logicElement8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginBottom="28dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:inputType="number"
        android:text="@string/logicElementValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <EditText
        android:id="@+id/logicElement7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="48dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:inputType="number"
        android:text="@string/logicElementValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toEndOf="@+id/logicElement8" />

    <EditText
        android:id="@+id/logicElement3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:clickable="false"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:inputType="number"
        android:text="@string/logicElementValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/logicElement4"
        app:layout_constraintStart_toEndOf="@+id/logicElement2"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/logicKey2"
        style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox.Dense"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/logicKeyElement"
        app:layout_constraintBottom_toTopOf="@+id/logicElement7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logicKey1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/logicKey1"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/logicElement8"
        app:layout_constraintEnd_toStartOf="@+id/logicKey2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTypeName"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/logicKeyElement" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="339dp"
        android:layout_height="157dp"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/questionExplanation" />
</androidx.constraintlayout.widget.ConstraintLayout>